Auto stash before merge of "master" and "origin/master"

--- a/Aula1/ex3.html
+++ b/Aula1/ex3.html
@@ -24,13 +24,14 @@
 
               <label> How did you find out about us?: <br/><textarea name="findOut"></textarea> </label><br/>
 
-              <label for="id_interests"><select name="interests" multiple='multiple' id="id_interests">
+              <label for="id_interests">
+                <select name="interests" id="id_interests" multiple='multiple'>
                 <option value="sports">Sports</option>
                 <option value="politics">Politics</option>
                 <option value="music">Music</option>
                 <option value="cinema">Cinema</option>
-              </select> </label> <br/>
-
+              </select>
+            </label> <br/>
 
               <input type="submit" value="Submit">
             </form>
