--- a/landing_page.html
+++ b/landing_page.html
@@ -11,10 +11,12 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" defer></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous" defer></script>
+        <!-- links -->
+        
     </head>
     <body>
         <!-- header -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light ">
             <a class="navbar-brand" href="#">BidBay</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,7 +33,7 @@
                         <a class="nav-link" href="#">FAQ</a>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+                <ul class="nav navbar-nav ml-auto justify-content-end" id="authentication-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Login</a>
                     </li>
@@ -40,6 +42,16 @@
                     </li>
                 </ul>
             </div>
+        </nav>
+
+        <!-- serach header -->
+        <nav class="navbar navbar-dark bg-primary">
+            <form>
+                <div class="form-row">
+                    <input class="form-control mr-sm-2 col" type="search" placeholder="Search" aria-label="Search" id="search-input">
+                    <button class="btn btn-light" type="submit">Search</button>
+                </div>
+            </form>
         </nav>
         
 
