added flatly theme

--- a/landing_page.html
+++ b/landing_page.html
@@ -13,6 +13,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous" defer></script>
         <!-- awesome fonts -->
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+        <!-- bootswatch flatly theme -->  
+        <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
         <!-- links -->
         <link rel="stylesheet" href="css/landing_page.css">
     </head>
@@ -268,7 +270,7 @@
         </div>
 
         <!-- footer -->
-        <nav class="navbar text-white bg-dark mt-5">
+        <nav class="navbar text-white bg-secondary mt-5">
             <ul class="nav navbar-nav mx-auto">
                 Website created by group 64 for LBAW
             </ul>
