landing page doneish

--- a/landing_page.html
+++ b/landing_page.html
@@ -77,17 +77,19 @@
                         <a href="#">
                             <img class="d-block w-100" src="https://placeimg.com/640/480/tech" alt="First slide">
                         </a>
-                        <div class="carousel-caption  d-md-block">
-                            <h3>Auction Title</h3>
+                        <div class="carousel-caption d-md-block">
+                            <h2>Auction Title</h2>
                             <p>15$, 5 bids</p>
                         </div>
+
+
                     </div>
                     <div class="carousel-item">
                         <a href="#">
                             <img class="d-block w-100" src="https://placeimg.com/640/480/arch" alt="Second slide">
                         </a>
-                        <div class="carousel-caption  d-md-block">
-                            <h3>Auction Title</h3>
+                        <div class="carousel-caption d-md-block">
+                            <h2>Auction Title</h2>
                             <p>15$, 5 bids</p>
                         </div>
                     </div>
@@ -95,8 +97,8 @@
                         <a href="#">
                             <img class="d-block w-100" src="https://placeimg.com/640/480/nature" alt="Third slide">
                         </a>
-                        <div class="carousel-caption  d-md-block">
-                            <h3>Auction Title</h3>
+                        <div class="carousel-caption d-md-block">
+                            <h2>Auction Title</h2>
                             <p>15$, 5 bids</p>
                         </div>
                     </div>
@@ -292,7 +294,7 @@
         </div>
 
         <!-- footer -->
-        <nav class="navbar text-white bg-secondary mt-5">
+        <nav class="navbar text-white bg-dark mt-5">
             <ul class="nav navbar-nav mx-auto">
                 Website created by group 64 for LBAW
             </ul>
