--- a/landing_page.html
+++ b/landing_page.html
@@ -218,7 +218,7 @@
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Submitted 5 mins ago</small>
+                                    <small class="text-muted">Ending in 15 mins </small>
                                 </p>
                             </div>
                         </a>
@@ -231,7 +231,7 @@
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Submitted 5 mins ago</small>
+                                    <small class="text-muted">Ending in 15 mins </small>
                                 </p>
                             </div>
                         </a>
@@ -244,7 +244,7 @@
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Submitted 5 mins ago</small>
+                                    <small class="text-muted">Ending in 15 mins </small>
                                 </p>
                             </div>
                         </a>
@@ -257,7 +257,7 @@
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Submitted 5 mins ago</small>
+                                    <small class="text-muted">Ending in 15 mins </small>
                                 </p>
                             </div>
                         </a>
@@ -270,7 +270,7 @@
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Submitted 5 mins ago</small>
+                                    <small class="text-muted">Ending in 15 mins </small>
                                 </p>
                             </div>
                         </a>
@@ -283,7 +283,7 @@
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                                 <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Submitted 5 mins ago</small>
+                                    <small class="text-muted">Ending in 15 mins </small>
                                 </p>
                             </div>
                         </a>
