--- a/FAQ.html
+++ b/FAQ.html
@@ -16,6 +16,7 @@
         <!-- bootswatch flatly theme -->  
         <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
         <!-- links -->
+        <link rel="stylesheet" href="css/faq.css">
     </head>
     <body>
         <!-- header -->
