Profile Page Main

--- a/profile_page.html
+++ b/profile_page.html
@@ -45,7 +45,7 @@
             <li class="nav-item">
                 <div class="dropdown show">
                     <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Hi JohnDoe39012
+                        Hi MrBurns001
                     </a>
 
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
@@ -77,7 +77,6 @@
                 <p class="email">mburns@bidbay.com</p>
             </div>
             <div class="row">
-                <div class="col-md-4">
                     <span class="sr-only">Four out of Five Stars</span>
                     <span class="fas fa-star" aria-hidden="true"></span>
                     <span class="fas fa-star" aria-hidden="true"></span>
@@ -85,23 +84,22 @@
                     <span class="fas fa-star" aria-hidden="true"></span>
                     <span class="far fa-star" aria-hidden="true"></span>
                     <span class="badge badge-success">61</span>
-                </div>
-
+            </div>
+            <div class="row">
+                <a href="#">Read Feedback</a>
+            </div>
+            <div class="row">
+                <button type="button">Edit Profile</button>
             </div>
         </div>
+
         <!-- Nav tabs -->
-        <ul class="nav nav-tabs">
-            <li class="nav-item" class="active">
-                <a class="nav-link active" id="feedback-tab" data-toggle="tab" href="#feedback" role="tab" aria-controls="feedback" aria-selected="true">Feedback</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" id="items-tab" data-toggle="tab" href="#items" role="tab" aria-controls="items" aria-selected="true">Items for Sale</a>
-            </li>
-        </ul>
+        <div class="row">
+            <h3>Items for Sale</h3>
+        </div>
         <!-- Tab panes -->
         <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="feedback" role="tabpanel" aria-labelledby="feedback-tab">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi aspernatur aut cumque doloremque fugit, illo ipsam laudantium minus, mollitia nostrum nulla, numquam porro possimus quas sed ullam vero? Laboriosam!</div>
-            <div class="tab-pane fade" id="items" role="tabpanel" aria-labelledby="items-tab">
+            <div class="tab-pane fade show active" id="items" role="tabpanel" aria-labelledby="items-tab">
                 <div class="container-fluid" id="main">
                     <div class="col-md-12">
                         <ul>
