--- a/profile_page.html
+++ b/profile_page.html
@@ -110,7 +110,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="/cenas">Computador para minar Bitcoins</a>
+                                            <a href="#">Computador para minar Bitcoins</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -131,7 +131,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="/cenas">Sapatilha do Chinês Kim Ung Dos</a>
+                                            <a href="#">Sapatilha do Chinês Kim Ung Dos</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -154,7 +154,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="/cenas">Carro em 12º mão</a>
+                                            <a href="#">Carro em 12º mão</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -186,10 +186,5 @@
         Website created by group 64 for LBAW
     </ul>
 </nav>
-</body>
-</html></title>
-</head>
-<body>
-
 </body>
 </html>
