--- a/landing_page.html
+++ b/landing_page.html
@@ -116,83 +116,83 @@
             <!-- Recent Auctions Grid -->
             <!-- can be the 6 most recent -->
             <div class="container mt-5 auction-grid">
-                <h3 class="border-bottom pb-1 mb-2">Most Recent Auctions: </h3>
+                <h3 class="border-bottom mb-3">Most Recent Auctions: </h3>
                 <div class="card-columns">
                     <!-- reference to auction here -->
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <!-- place auction data here -->
                             <!-- images can be any size -->
                             <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
                                     <small class="text-muted">Submitted 5 mins ago</small>
                                 </p>
                             </div>
                         </a>
                     </div>
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
                                     <small class="text-muted">Submitted 5 mins ago</small>
                                 </p>
                             </div>
                         </a>
                     </div>
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
                                     <small class="text-muted">Submitted 5 mins ago</small>
                                 </p>
                             </div>
                         </a>
                     </div>
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
                                     <small class="text-muted">Submitted 5 mins ago</small>
                                 </p>
                             </div>
                         </a>
                     </div>
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
                                     <small class="text-muted">Submitted 5 mins ago</small>
                                 </p>
                             </div>
                         </a>
                     </div>
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
                                     <small class="text-muted">Submitted 5 mins ago</small>
                                 </p>
@@ -205,85 +205,85 @@
             <!-- Ending soon Auctions Grid -->
             <!-- can be 4 that are ending soon -->
             <div class="container mt-5 auction-grid">
-                <h3 class="border-bottom pb-1 mb-2">Ending Soon: </h3>
+                <h3 class="border-bottom mb-3">Ending Soon: </h3>
                 <div class="card-columns">
                     <!-- reference to auction here -->
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <!-- place auction data here -->
                             <!-- images can be any size -->
                             <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Ending in 15 mins </small>
+                                    <small class="text-muted">Ending in 15 mins</small>
                                 </p>
                             </div>
                         </a>
                     </div>
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Ending in 15 mins </small>
+                                    <small class="text-muted">Ending in 15 mins</small>
                                 </p>
                             </div>
                         </a>
                     </div>
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Ending in 15 mins </small>
+                                    <small class="text-muted">Ending in 15 mins</small>
                                 </p>
                             </div>
                         </a>
                     </div>
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Ending in 15 mins </small>
+                                    <small class="text-muted">Ending in 15 mins</small>
                                 </p>
                             </div>
                         </a>
                     </div>
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Ending in 15 mins </small>
+                                    <small class="text-muted">Ending in 15 mins</small>
                                 </p>
                             </div>
                         </a>
                     </div>
-                    <div class="card mb-3 mt-2">
+                    <div class="card mb-3 mt-2 border-info">
                         <a href="#">
                             <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                             <div class="card-body">
                                 <h3 class="card-title">Auction Title</h3>
+                                <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
                                 <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
-                                <p class="card-text text-secondary"> 10$, 5 bids</p>
                                 <p class="card-text">
-                                    <small class="text-muted">Ending in 15 mins </small>
+                                    <small class="text-muted">Ending in 15 mins</small>
                                 </p>
                             </div>
                         </a>
