--- a/landing_page.html
+++ b/landing_page.html
@@ -25,6 +25,20 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <nav class="container-fluid bg-secondary mt-0 sticky-top">
+                    <form>
+                        <div class="d-flex px-lg-2 py-3">
+                            <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
+                            <select class="form-control rounded-0 col-2 d-none d-sm-block d-xs-block">
+                                <option selected> All Categories </option>
+                                <option>Technology</option>
+                                <option>Automobiles</option>
+                                <option>Clothes</option>
+                            </select>
+                            <button class="btn btn-light rounded-0 " type="submit"><i class="fas fa-search"></i></button>
+                        </div>
+                    </form>
+                </nav>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -53,20 +67,6 @@
         <div class="container">
             
             <!-- serach bar -->
-            <nav class="container-fluid bg-secondary mt-0 sticky-top">
-                <form>
-                    <div class="d-flex px-lg-2 py-3">
-                        <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
-                        <select class="form-control rounded-0 col-2 d-none d-sm-block d-xs-block">
-                            <option selected> All Categories </option>
-                            <option>Technology</option>
-                            <option>Automobiles</option>
-                            <option>Clothes</option>
-                        </select>
-                        <button class="btn btn-light rounded-0 " type="submit"><i class="fas fa-search"></i></button>
-                    </div>
-                </form>
-            </nav>
 
             <!-- auctions carousel -->
             <!-- these could be just random auctions in the system -->
@@ -294,9 +294,20 @@
         </div>
 
         <!-- footer -->
-        <nav class="navbar text-white bg-dark mt-5">
-            <ul class="nav navbar-nav mx-auto">
-                Website created by group 64 for LBAW
+        <nav class="navbar navbar-light bg-dark mt-5" id="footer">
+            <ul class="nav">
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">FAQ</a>
+                </li>
+                <li class="nav-item">
+                    <span class="align-middle text-white">Website created by group 64 for LBAW</span>
+                </li>
             </ul>
         </nav>
     </body>
