landing_page unfinished

--- a/landing_page.html
+++ b/landing_page.html
@@ -305,6 +305,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#">FAQ</a>
                 </li>
+                
+            </ul>
+            <ul class="nav navbar-nav ml-auto justify-content-end d-none d-sm-block d-xs-block" id="authentication-nav">
                 <li class="nav-item">
                     <span class="align-middle text-white">Website created by group 64 for LBAW</span>
                 </li>
