--- a/landing_page.html
+++ b/landing_page.html
@@ -22,73 +22,39 @@
     <body>
 
         <!-- header -->
-        <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top justify-content-center" id="pge-header">
-            <a class="navbar-brand" href="#" class="mr-auto" id="branding"> BidBay</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-between">
+            <!-- logo -->
+            <a href="#" class="navbar-brand">BidBay</a>
+            <!-- search bar -->
+            <form class="px-2" id="search-bar">
+                <div class="d-flex">
+                    <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
+                    <select class="form-control rounded-0 col-2 d-none d-sm-block d-xs-block">
+                        <option selected> All Categories </option>
+                        <option>Technology</option>
+                        <option>Automobiles</option>
+                        <option>Clothes</option>
+                    </select>
+                    <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
+                </div>
+            </form>
+            <!-- mobile authentication button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#authentication">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <!-- search bar -->
-                <form class="mx-auto justify-content-center">
-                    <div class="d-flex">
-                        <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
-                        <select class="form-control rounded-0 col-2 d-none d-sm-block d-xs-block">
-                            <option selected> All Categories </option>
-                            <option>Technology</option>
-                            <option>Automobiles</option>
-                            <option>Clothes</option>
-                        </select>
-                        <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
-                    </div>
-                </form>
-
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="nav navbar-nav ml-auto justify-content-end" id="authentication-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
-                    </li>
-                </ul>
-            </div>
-
-        </nav>
-
-        <!--  -->
-        <nav class="navbar navbar-light bg-light sticky-top navbar-expand-md" id="page-header">
-            <a href="#" class="navbar-brand">BidBay</a>
-            <div class="nav justify-content-between" id="search-bar">
-                    <form class="mx-auto ">
-                            <div class="d-flex px-lg-2">
-                                <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
-                                <select class="form-control rounded-0 col-2 d-none d-sm-block d-xs-block">
-                                    <option selected> All Categories </option>
-                                    <option>Technology</option>
-                                    <option>Automobiles</option>
-                                    <option>Clothes</option>
-                                </select>
-                                <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
-                            </div>
-                        </form>
-                    <!-- </div> -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
-                        <span class="navbar-toggler-icon"></span>
-                </button>
-            <div class="navbar-collapse collapse justify-content-end" id="collapsingNavbar3">
+            <div class="navbar-collapse collapse justify-content-end" id="authentication">
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link text-right" href="#">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
+                        <a class="nav-link text-right" href="#">Register</a>
                     </li>
                 </ul>
             </div>  
 
-            </div>
         </nav>
-        <!--  -->
         
         <div class="container">
             <!-- auctions carousel -->
