--- a/landing_page.html
+++ b/landing_page.html
@@ -18,6 +18,7 @@
         <!-- links -->
         <link rel="stylesheet" href="css/landing_page.css">
         <link rel="stylesheet" href="css/header.css">
+        <link rel="stylesheet" href="css/footer.css">
     </head>
     <body>
 
@@ -42,7 +43,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#authentication">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
+            <!-- authentication links -->
             <div class="navbar-collapse collapse justify-content-end" id="authentication">
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
@@ -283,8 +284,8 @@
         </div>
 
         <!-- footer -->
-        <nav class="navbar navbar-light bg-dark" id="footer">
-            <ul class="nav">
+        <nav class="navbar navbar-light bg-dark d-flex justify-content-between py-0" id="footer">
+            <ul class="nav d-flex justify-content-center">
                 <li class="nav-item active">
                     <a class="nav-link text-white" href="#">Home </a>
                 </li>
@@ -294,7 +295,6 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#">FAQ</a>
                 </li>
-                
             </ul>
             <ul class="nav navbar-nav ml-auto justify-content-end mr-3 d-none d-sm-block d-xs-block" id="authentication-nav">
                 <li class="nav-item">
